added user creation page

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,5 +8,7 @@
 {% else %}
   <p>You are not logged in </p>
   <a href="{%url 'login' %}">Log In</a>
+  <br>
+  <a href="create-account/">Create Account</a>
  {% endif %}
  {% endblock %}
