--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -1,9 +1,10 @@
 <html>
 	<body>
+		{% include 'messages.html' %}
 		<h1>Create Account</h1>
 		<form action = "/create-account/" method = "post">
 			{% csrf_token %}
-			{{ form }}
+			{{form}}
 			<input type="submit" value="Create Account">
 		</form>
 	</body>
